# stellar-tipjar-backend

./: .dockerignore  .env.example  .env.test  Cargo.toml  Dockerfile  Dockerfile.dev  PR_DESCRIPTION_229_234_236_240.md  compose.yml  docker-compose.services.yml
docs/: API_REFERENCE.md  API_VERSIONING.md  ARCHITECTURE.md  AUTHENTICATION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  ERROR_HANDLING.md  EXAMPLES.md  MIGRATIONS.md  POSTMAN_COLLECTION.json  RATE_LIMITING.md  REQUEST_SIGNING.md  WEBHOOKS.md
docs/ops/: DEPLOYMENT.md  INCIDENT_RESPONSE.md  MAINTENANCE.md  RUNBOOK.md  SECURITY.md
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  istio.yaml  kong-configmap.yaml  kong.yaml  service.yaml
kong/: kong.yml
migrations/: 0001_create_creators.down.sql  0002_create_tips.down.sql  0003_add_creator_password.down.sql  0003_add_creator_password.sql  0003_create_admin_users.down.sql  0003_create_admin_users.sql  0005_add_indexes.down.sql  0005_add_indexes.sql  0006_add_search_indexes.down.sql  0006_add_search_indexes.sql  0007_add_creator_email.down.sql  0007_add_creator_email.sql  0007_create_tip_logs.down.sql  0007_create_tip_logs.sql  0008_create_webhooks.down.sql  0008_create_webhooks.sql  0009_create_events.down.sql  0009_security_tables.down.sql  0009_security_tables.sql  0010_create_creator_read_model.down.sql  0010_saga_state.down.sql  0010_saga_state.sql  0011_analytics_tables.down.sql  0011_analytics_tables.sql  0012_create_job_tables.down.sql  0012_create_jobs.sql  0012_moderation_tables.down.sql  0012_moderation_tables.sql  0013_create_email_tables.down.sql  0014_create_search_indexes.down.sql  0020_add_tenancy.down.sql  0021_add_fraud_detection.down.sql  0022_add_blockchain_indexer.down.sql  0023_add_job_priority.down.sql  0024_notifications.down.sql  0024_notifications.sql  0025_create_leaderboard.down.sql  0026_creator_verification.down.sql  0027_tip_goals.down.sql  0028_api_keys_and_nonces.sql  (+33 more)
monitoring/prometheus/: alerts.yml  prometheus.yml  recording_rules.yml
scripts/: backup.sh  restore.sh  validate_migrations.sh
src/: lib.rs  main.rs  shutdown.rs
src/admin/: backup.rs
src/analytics/: aggregators.rs  anomaly_detector.rs  mod.rs  stream_processor.rs  windowing.rs
src/cache/: keys.rs  mod.rs  redis_client.rs  warming.rs
src/cdn/: mod.rs  service.rs  transform.rs  upload.rs
src/config/: cors.rs
src/controllers/: admin_controller.rs  analytics_controller.rs  api_key_controller.rs  audit_log_controller.rs  campaign_controller.rs  category_controller.rs  comment_controller.rs  creator_controller.rs  export_controller.rs  feature_flag_controller.rs  follow_controller.rs  ip_controller.rs  location_controller.rs  mod.rs  notification_controller.rs  receipt_controller.rs  refund_controller.rs  scheduled_tip_controller.rs  stats_controller.rs  subscription_controller.rs  tenant_controller.rs  tip_controller.rs  upload_controller.rs  usage_analytics_controller.rs
src/cqrs/: command_bus.rs  handlers.rs  mod.rs  projections.rs  queries.rs  query_bus.rs  synchronizer.rs
src/crypto/: encryption.rs  mod.rs  signing.rs
src/currency/: mod.rs
src/db/: connection.rs  health.rs  mod.rs  performance.rs  query_logger.rs  replica.rs  sharding.rs  transaction.rs
src/deployment/: blue_green.rs  mod.rs
src/docs/: mod.rs
src/email/: mod.rs  sender.rs  templates.rs
src/errors/: app_error.rs  database.rs  mod.rs  stellar.rs  validation.rs
src/events/: projections.rs  replay.rs  store.rs  types.rs
src/gateway/: api_gateway.rs  authentication.rs  config.rs  context.rs  middleware.rs  mod.rs  request_transformer.rs  versioning.rs
src/graphql/: context.rs  dataloaders.rs  mod.rs  mutations.rs  queries.rs  schema.rs  subscriptions.rs
src/indexer/: listener.rs  mod.rs  processor.rs
src/jobs/: handlers.rs  mod.rs  queue.rs  scheduler.rs  types.rs  worker.rs
src/logging/: mod.rs
src/metrics/: collectors.rs  mod.rs
src/middleware/: admin_auth.rs  api_key_auth.rs  auth.rs  authorization.rs  cache.rs  compression.rs  deprecation.rs  metrics.rs  mod.rs  rate_limiter.rs  request_id.rs  signature.rs  timeout.rs  tracing.rs  usage_tracker.rs  version.rs
src/ml/: collaborative_filter.rs  content_based.rs  mod.rs  model_training.rs  recommendation_engine.rs
src/mocking/: generators.rs  mod.rs  recorder.rs  registry.rs  server.rs  templates.rs
src/models/: admin.rs  api_key.rs  audit_log.rs  auth.rs  campaign.rs  category.rs  comment.rs  creator.rs  feature_flag.rs  follow.rs  ip_block.rs  location.rs  mod.rs  notification.rs  oauth2.rs  pagination.rs  receipt.rs  refund.rs  scheduled_tip.rs  stats.rs  subscription.rs  tenant.rs  tip.rs  tx_pool.rs
src/moderation/: ai_detector.rs  mod.rs  review_queue.rs  rules.rs
src/queue/: connection.rs  consumer.rs  handlers.rs  mod.rs  publisher.rs  system.rs
src/routes/: admin.rs  analytics.rs  api_keys.rs  audit_logs.rs  auth.rs  categories.rs  comments.rs  creators.rs  currency.rs  export.rs  feature_flags.rs  follows.rs  health.rs  ip_blocking.rs  location.rs  locks.rs  (+16 more)
templates/: tip_received.html  welcome.html
tests/: auth_test.rs  creators_test.rs  feature_tests.rs  location_test.rs  rate_limit_test.rs  team_test.rs  tips_test.rs  validation_test.rs
(+61 files in other folders)
