[package]
name = "stellar-tipjar-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stellar-tipjar-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
prometheus = "0.13"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "timeout", "trace"] }
tower_governor = { version = "0.4", features = ["axum"] }
governor = "0.6"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
anyhow = "1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum", "vendored"] }
sha2 = "0.11.0"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
