[package]
name = "stellar-tipjar-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stellar-tipjar-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
prometheus = "0.13"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "timeout", "trace", "compression-gzip", "request-id"] }
tower_governor = { version = "0.4", features = ["axum"] }
governor = "0.6"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }
bcrypt = "0.15"
jsonwebtoken = "9"
regex = "1"
tera = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder", "hostname", "pool"] }
csv = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
rust_decimal = "1"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
oath = "1.1"
rand = "0.8"
data-encoding = "2"
utoipa-swagger-ui = { version = "7", features = ["axum"] }
async-graphql = { version = "7", features = ["uuid", "chrono", "dataloader"] }
async-graphql-axum = "7"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
tokio-cron-scheduler = "0.10"
lapin = "2"

# OpenTelemetry distributed tracing
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.14"
tracing-opentelemetry = "0.23"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
httpmock = "0.7"
proptest = "1.4"
criterion = "0.5"
# tarpaulin = "0.27"  # not a library crate; use `cargo tarpaulin` CLI instead